# pytutor

./: .editorconfig  .gitattributes  .gitconfig  .gitignore  README.md  TODO.md  api.json  data_file2.json  example.py  example2.py  example3.py  pdm.toml  poetry.toml  pyproject.toml  test.ipynb  testing.py
ArjanCodes/: 1 cohesion_coupling.py  1b_cohesion_coupling.py
FullStackPythonSecurity/: 0_intro.ipynb  1_crypto_foundations.ipynb  2_authentication_authorization.ipynb  3_attack_resistance.ipynb  server.crt  wordlist.txt
OOD/: cohesion_coupling.ipynb
PythonTricks/1 Patterns for Cleaner Python/: comma.ipynb  context_managers.ipynb  strings.ipynb
SOLID/: D.ipynb  I.ipynb  L.ipynb  S.ipynb  single_responsibility_principle.py
_mynotes/: edit_list_when_iterating.py  lambda.py  types.ipynb
arjan_codes/: 1_cohesion_coupling.ipynb  1b_cohesion_coupling.py
full_stack_python_security/: 2_authentication_authorization.ipynb
generators/: gen1.py  gen10.py  gen2.py  gen5.py  gen6.py  gen8.py
generatory/: gen1.py  gen10.py  gen4.py
mynotes/: tricks.ipynb  types.ipynb  typing_tut.py
notes/: deque.py  exception_chaining.py  positional_keyworded_only.py  property.ipynb  slices.py  tail_call.py  triple_comparison.py  types.ipynb  types.py  typing_tut.py
oop/: data_hiding.ipynb
patterns/: builder.ipynb
principles/: inheritance_composition.ipynb
rest/: allegro.http
sandbox/: test.py
w3resource/: tut10.py  tut12.py  tut14.py  tut25.py  tut28.py  tut29.py  tut4.py  tut41.py  tut46.py  tut48.py  tut5.py  tut51.py  tut55.py  tut6.py  tut62.py  tut8.py  tut9.py
(+248 files in other folders)
