[tool.poetry]
name = "pytutor"
version = "0.1.0"
description = ""
authors = ["PaszaVonPomiot"]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ['py310']
include = '\.pyi?$'
